# Mobile_Shooter_Game

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default.frag  default.vert  model.frag  model.vert
app/src/main/assets/Shaders/: model.frag  model.vert
app/src/main/assets/Shaders/City/: model.frag
app/src/main/assets/Shaders/Enemy/: model.frag
app/src/main/assets/Shaders/Gun/: model.frag  model.vert
app/src/main/assets/Shaders/Hand/: model.frag
app/src/main/assets/Shaders/JoyStick/: model.frag  model.vert
app/src/main/assets/Shaders/Skybox/: skybox.frag  skybox.vert
app/src/main/assets/Shaders/Zombie/: model.vert
app/src/main/cpp/: AssetManager.h  CMakeLists.txt  Renderer.cpp  Renderer.h  Touch.cpp  Touch.h  main.cpp
app/src/main/cpp/Buffers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
app/src/main/cpp/Camera/: Camera.cpp  Camera.h
app/src/main/cpp/FileIO/: FileIO.cpp  FileIO.h
app/src/main/cpp/Loader/: Loader.cpp  Loader.h
app/src/main/cpp/Mesh/: Cube.h  Square.cpp  Square.h
app/src/main/cpp/Shaders/: default.frag  shaderClass.cpp  shaderClass.h
app/src/main/cpp/Textures/: Texture.cpp  Texture.h
app/src/main/cpp/assets/: default.frag  default.vert
app/src/main/java/com/example/shootergame/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
